End of section 4

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -2,6 +2,7 @@
   "ConnectionStrings": {
     "DefaultConnection": "Data source=datingapp.db"
   },
+  "TokenKey":"super super secret F@!rB@nK$kN!gHTf@ll key unguessable hard to find key",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
